kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp  # This should match the labels defined for the pods
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      initContainers:  # Correctly indented initContainers
        - name: init-mydb
          image: busybox
          command: ['sh', '-c', "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprodb; sleep 2; done"]
        - name: init-memcache
          image: busybox
          command: ['sh', '-c', "until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprocache01; sleep 2; done"]
        - name: init-rabbitmq
          image: busybox
          command: ['sh', '-c', "until nslookup vprormq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprormq01; sleep 2; done"]
      containers:
        - name: vproapp
          image: vprocontainers/vprofileapp
          imagePullPolicy: Always
          ports:
            - name: vproapp-port
              containerPort: 8080
