kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
  selector:
    app: vproapp
spec:  
  ports:
    - protocol: TCP  
      port: 8080  
      targetPort: 8080 
  type: ClusterIP
