kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01 
  selector:
    app: vpromc
spec:  
  ports:
    - protocol: TCP  
      port: 11211  
      targetPort: vpromc-port  
  type: ClusterIP
