kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01  # The name of the service
spec:
  selector:
    app: vprormq  # The label selector to match pods
  ports:
    - protocol: TCP
      port: 5672  # The port exposed by the service
      targetPort: vpromq-port  # The port on the container the traffic should go to
  type: ClusterIP  # Internal service for use within the cluster
